# ai-changelog

./: .gitignore  .isort.cfg  .python-lint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/actions/setup-python-env/: action.yml
.github/linters/: .isort.cfg  actionlint.yml
.github/workflows/: build.yml  docs.yml  linter.yml  update.yml
src/ai_changelog_msg/: __init__.py  ai_provider.py  changelog.py  config.py  git_helper.py  main.py
tests/: __init__.py  test_ai_provider.py  test_changelog.py  test_config.py  test_deepeval_summarization.py  test_git_helper.py  test_main.py
